src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__draw_onboarding_cards_at_the_minimum_terminal_size_snapshot@killswitch.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0┌──────────────────────────────────────────────────────┐ectio │
└──────│                Getting started · 9/10                │──────┘
┌ Profi│                Set up the kill switch                │──────┐
│ No so│ The kill switch prevents new internet connections    │om    │
│clipbo│ from going outside the VPN if the tunnel goes down.  │      │
│      │ First, set it up:                                    │      │
│      │ sudo pacman -S --needed nftables \                   │      │
│      │   && sudo kvn setup --killswitch                     │      │
│      │ Reboot once, then press Shift+K to toggle the kill   │      │
│      │ switch.                                              │      │
│      │              󰌑 continue · y copy command             │      │
│      └──────────────────────────────────────────────────────┘      │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                             DoH  Global    (off) never 
[70x15]
