src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__protection_cards_follow_their_setup_state_snapshot@autoconnect-missing-groupactive.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                           ┌──────────────────────────────────────────────────────┐                            │
│                           │                Getting started · 8/10                │                            │
│                           │                                                      │                            │
│                           │                  Set up auto-connect                 │                            │
│                           │                                                      │                            │
│                           │ Auto-connect reconnects to your last used profile    │                            │
│                           │ when the kvn daemon starts.                          │                            │
│                           │                                                      │                            │
│                           │ First, set up polkit:                                │                            │
│                           │                                                      │                            │
│                           │ sudo pacman -S --needed polkit \                     │                            │
│                           │   && sudo kvn setup --polkit                         │                            │
│                           │                                                      │                            │
│                           │ Then press Shift+A to toggle auto-connect.           │                            │
│                           │                                                      │                            │
│                           │              󰌑 continue · y copy command             │                            │
│                           └──────────────────────────────────────────────────────┘                            │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
